--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -3,10 +3,42 @@
 <section>
 
 
-<!-- twitter user data-->
-  <article class="api-section">
+<!-- GH user data-->
+  <article  id="contact" class="api-section">
+    <h2>Contact Info</h2>
+    <div>
 
-    <h2>Tweets</h2>
+      <p>Name: {{apiProfile.github.user.name}}</p>
+      <p>Email: {{apiProfile.github.user.email}}</p>
+      <p>Blog: {{apiProfile.github.user.blog}}</p>
+      <p>Bio: {{apiProfile.github.user.bio}}</p>
+      <p><img src="{{apiProfile.github.user.avatar_url}}"></p>
+    </div>
+
+  </article>
+
+  <article  id="code" class="api-section">
+    <h2>My code in Github </h2>
+      <p>Using Github since: {{apiProfile.github.user.created_at}}</p>
+      <p>Github user: <a target="_blanck" href="{{githubUser.html_url}}">{{apiProfile.github.user.login}}</a></p>
+
+    <h3>Github User Repos</h3>
+    <!--div>{{profileData.github.repos}}</div-->
+    <div ng-repeat="repo in apiProfile.github.repos">
+      <p>{{$index}}</p>
+      <p>{{repo.name}} since: {{repo.created_at}}</p>
+      <p>{{repo.language}}</p>
+      <p>{{repo.description}}</p>
+      <hr>
+    </div>
+
+  </article>
+
+<!-- twitter user data-->
+  <article class="api-section" id="tweets">
+
+    <h2>My Tweets</h2>
+    <p>This is what I'm talking about</p>
     <ul>
       <li ng-repeat="tweet in apiProfile.twitter">
         <p>#{{$index+1}} <b>{{tweet.created_at}}</b></p>
@@ -30,29 +62,13 @@
 
   </article>
 
-<!-- GH user data-->
-  <article  class="api-section">
-    <h2>Github User Data</h2>
-    <!--div>{{profileData.github.user}}</div-->
-    <div>
-      <p>Github user: <a target="_blanck" href="{{githubUser.html_url}}">{{apiProfile.github.user.login}}</a> since: {{apiProfile.github.user.created_at}}</p>
-      <p>Name: {{apiProfile.github.user.name}}</p>
-      <p>Email: {{apiProfile.github.user.email}}</p>
-      <p>Blog: {{apiProfile.github.user.blog}}</p>
-      <p>Bio: {{apiProfile.github.user.bio}}</p>
-      <p><img src="{{apiProfile.github.user.avatar_url}}"></p>
 
-    </div>
 
-    <h2>Github User Repos</h2>
-    <!--div>{{profileData.github.repos}}</div-->
-    <div ng-repeat="repo in apiProfile.github.repos">
-      <p>{{$index}}</p>
-      <p>{{repo.name}} since: {{repo.created_at}}</p>
-      <p>{{repo.language}}</p>
-      <p>{{repo.description}}</p>
-      <hr>
-    </div>
+<!-- Extra  data-->
+  <article class="api-section">
+
+    <h2>Extra data</h2>
+    <div>{{apiProfile.extra |json}}</div>
 
   </article>
 
