--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -102,7 +102,7 @@
 
 <!-- GITHUB -->
   <article  id="code" class="api-section">
-    <h2 class="txtcenter"><a target="_blanck" href="{{githubUser.html_url}}">My code</a> in Github <i class="fa fa fa-github-alt"></i> </h2>
+    <h2 class="txtcenter"><a target="_blanck" href="{{apiProfile.github.user.html_url}}">My code</a> in Github <i class="fa fa fa-github-alt"></i> </h2>
     <p class="txtcenter">Last update: {{apiProfile.github.user.updated_at}} user: <b>{{apiProfile.github.user.login}}</b></p>
 
     <!--div>{{profileData.github.repos}}</div-->
